Adding new file containing debug and assembler functions for IR.

--- a/src/isa/CMakeLists.txt
+++ b/src/isa/CMakeLists.txt
@@ -1,5 +1,7 @@
 set(SOURCE
    ${SOURCE}
    ${CMAKE_CURRENT_SOURCE_DIR}/vexISA.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/irISA.cpp
+   
    PARENT_SCOPE
 )
