--- a/src/transformation/CMakeLists.txt
+++ b/src/transformation/CMakeLists.txt
@@ -2,6 +2,10 @@ set(SOURCE
    ${SOURCE}
    ${CMAKE_CURRENT_SOURCE_DIR}/firstPassTranslator.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/irGenerator.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/irScheduler.cpp   
+   ${CMAKE_CURRENT_SOURCE_DIR}/irScheduler.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/optimizeBasicBlock.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/buildControlFlow.cpp   
+   
+     
    PARENT_SCOPE
 )
