--- a/src/simulator/CMakeLists.txt
+++ b/src/simulator/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(SOURCE
    ${SOURCE}
    ${CMAKE_CURRENT_SOURCE_DIR}/vexSimulator.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/riscvSimulator.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Simulator.cpp   
    PARENT_SCOPE
 )
