--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -1,2 +1,7 @@
 #No non executable sources here
 
+set(EXECUTABLE
+   ${EXECUTABLE}
+   ${CMAKE_CURRENT_SOURCE_DIR}/simRISCV.cpp
+   PARENT_SCOPE
+)
