--- a/src/transformation/CMakeLists.txt
+++ b/src/transformation/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(SOURCE
    ${SOURCE}
    ${CMAKE_CURRENT_SOURCE_DIR}/firstPassTranslator.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/firstPassTranslatorRISCV.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/irGenerator.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/irScheduler.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/optimizeBasicBlock.cpp
