--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(SOURCE
    ${SOURCE}
    ${CMAKE_CURRENT_SOURCE_DIR}/elfFile.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/debugFunctions.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/endianness.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/JIT-Tools_multiarch.cpp   
    PARENT_SCOPE
