Adding new functionality to the DBT framework: profiling of used basic block. File profiling.h define functions to insert profiling code in a block and to collect the result.
Currently the application can follow up to 1024 blocks. Primary results
show zero slow down while doing the profiling (instruction are added on
empty cycles of the VLIW).

The procedure to get profiling results needs to be modified because it
currently print results.

--- a/src/dbt/CMakeLists.txt
+++ b/src/dbt/CMakeLists.txt
@@ -1,7 +1,9 @@
 set(SOURCE
-   ${SOURCE}
-   ${CMAKE_CURRENT_SOURCE_DIR}/initCode.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/insertions.cpp
+  	${SOURCE}
+   	${CMAKE_CURRENT_SOURCE_DIR}/initCode.cpp
+  	${CMAKE_CURRENT_SOURCE_DIR}/insertions.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/profiling.cpp
+ 
    PARENT_SCOPE
 )
 
