--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -3,5 +3,6 @@
 set(EXECUTABLE
    ${EXECUTABLE}
    ${CMAKE_CURRENT_SOURCE_DIR}/simRISCV.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/simMIPS.cpp
    PARENT_SCOPE
 )
