--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -4,5 +4,6 @@ set(EXECUTABLE
    ${EXECUTABLE}
    ${CMAKE_CURRENT_SOURCE_DIR}/simRISCV.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/simMIPS.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/dumpBinaryCode.cpp
    PARENT_SCOPE
 )
