Cleaning syscall on simulator.
The two simulators now inherit from a single genric simulator where
every thing is implemented to handle correctly syscalls and argument
passing. 
Some methods on memory access have been moved too.

Binaries dbt and simRISCV have been tested on several benches and it
looks good.

--- a/src/simulator/CMakeLists.txt
+++ b/src/simulator/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(SOURCE
    ${SOURCE}
+  ${CMAKE_CURRENT_SOURCE_DIR}/genericSimulator.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/vexSimulator.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/riscvSimulator.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/mipsSimulator.cpp   
