Adding new optimization to merge blocks and to reschedule the procedure at a new location. The current implementation of opt works on toy examples.

--- a/src/transformation/CMakeLists.txt
+++ b/src/transformation/CMakeLists.txt
@@ -7,7 +7,8 @@ set(SOURCE
    ${CMAKE_CURRENT_SOURCE_DIR}/optimizeBasicBlock.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/buildControlFlow.cpp   
    ${CMAKE_CURRENT_SOURCE_DIR}/reconfigureVLIW.cpp   
-   ${CMAKE_CURRENT_SOURCE_DIR}/buildTraces.cpp   
+   ${CMAKE_CURRENT_SOURCE_DIR}/buildTraces.cpp  
+   ${CMAKE_CURRENT_SOURCE_DIR}/rescheduleProcedure.cpp 
    
      
    PARENT_SCOPE
