--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,7 @@ add_subdirectory(simulator)
 add_subdirectory(isa)
 add_subdirectory(transformation)
 add_subdirectory(tools)
+add_subdirectory(montest1)
 
 set(SOURCE
    ${SOURCE}
