Change Log class behaviour

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -1,8 +1,11 @@
+add_subdirectory(log)
+
 set(SOURCE
    ${SOURCE}
    ${CMAKE_CURRENT_SOURCE_DIR}/elfFile.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/debugFunctions.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/endianness.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/JIT-Tools_multiarch.cpp   
+   ${CMAKE_CURRENT_SOURCE_DIR}/JIT-Tools_multiarch.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/config.cpp
    PARENT_SCOPE
 )
