Modifying the structure of first pass translation
All first pass trasnformation are now gathered in a common subfolder and
in separated files. Added a new function that will perform the first
pass translation in software. 
Warning: this new function has not been tested yet.

This change comes with side effect changes on different isa files to
support correctly the sw implementation.
Many ifdef have been modified to be cleaner.

--- a/src/isa/CMakeLists.txt
+++ b/src/isa/CMakeLists.txt
@@ -2,8 +2,7 @@ set(SOURCE
    ${SOURCE}
    ${CMAKE_CURRENT_SOURCE_DIR}/vexISA.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/irISA.cpp
-  ${CMAKE_CURRENT_SOURCE_DIR}/riscvISA.cpp
-   
-   
+   ${CMAKE_CURRENT_SOURCE_DIR}/riscvISA.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/riscvToVexISA.cpp
    PARENT_SCOPE
 )
