--- a/src/transformation/CMakeLists.txt
+++ b/src/transformation/CMakeLists.txt
@@ -1,7 +1,7 @@
+add_subdirectory(firstPassTranslation)
+
 set(SOURCE
    ${SOURCE}
-   ${CMAKE_CURRENT_SOURCE_DIR}/firstPassTranslator.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/firstPassTranslatorRISCV.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/irGenerator.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/irScheduler.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/optimizeBasicBlock.cpp
@@ -9,7 +9,10 @@ set(SOURCE
    ${CMAKE_CURRENT_SOURCE_DIR}/reconfigureVLIW.cpp   
    ${CMAKE_CURRENT_SOURCE_DIR}/buildTraces.cpp  
    ${CMAKE_CURRENT_SOURCE_DIR}/rescheduleProcedure.cpp 
+  ${CMAKE_CURRENT_SOURCE_DIR}/memoryDisambiguation.cpp 
    
      
    PARENT_SCOPE
 )
+
+
