Moving IRGeneration in a different folder
Same modification than for others hw/sw transformation: we now use
different files for different implementations

--- a/src/transformation/CMakeLists.txt
+++ b/src/transformation/CMakeLists.txt
@@ -1,9 +1,9 @@
 add_subdirectory(firstPassTranslation)
+add_subdirectory(irGeneration)
 add_subdirectory(irScheduling)
 
 set(SOURCE
    ${SOURCE}
-   ${CMAKE_CURRENT_SOURCE_DIR}/irGenerator.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/optimizeBasicBlock.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/buildControlFlow.cpp   
    ${CMAKE_CURRENT_SOURCE_DIR}/reconfigureVLIW.cpp   
