Many small modifs and adding sbt (static binary translation file)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,11 @@ set(SOURCE
    PARENT_SCOPE
 )
 
+set(SOURCE_DBT
+   ${SOURCE_DBT}
+   PARENT_SCOPE
+)
+
 set(EXECUTABLE
    ${EXECUTABLE}
    PARENT_SCOPE
