--- a/src/dbt/CMakeLists.txt
+++ b/src/dbt/CMakeLists.txt
@@ -1,5 +1,16 @@
 set(SOURCE
   	${SOURCE}
+   	${CMAKE_CURRENT_SOURCE_DIR}/dbtPlateform.cpp	
+   	${CMAKE_CURRENT_SOURCE_DIR}/initCode.cpp
+  	${CMAKE_CURRENT_SOURCE_DIR}/insertions.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/profiling.cpp
+ 
+   PARENT_SCOPE
+)
+
+set(SOURCE_DBT
+   ${SOURCE_DBT}
+   	${CMAKE_CURRENT_SOURCE_DIR}/dbtPlateform.cpp
    	${CMAKE_CURRENT_SOURCE_DIR}/initCode.cpp
   	${CMAKE_CURRENT_SOURCE_DIR}/insertions.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/profiling.cpp
@@ -10,5 +21,7 @@ set(SOURCE
 set(EXECUTABLE
    ${EXECUTABLE}
    ${CMAKE_CURRENT_SOURCE_DIR}/dbt.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/sbt.cpp
+   
    PARENT_SCOPE
 )
