--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -7,5 +7,15 @@ set(SOURCE
    ${CMAKE_CURRENT_SOURCE_DIR}/traceQueue.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/threadedDebug.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/log.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/dbtProfiling.cpp
+   PARENT_SCOPE
+)
+
+
+set(SOURCE_DBT
+   ${SOURCE_DBT}
+   ${CMAKE_CURRENT_SOURCE_DIR}/dbtProfiling.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/endianness.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/log.cpp
    PARENT_SCOPE
 )
