--- a/src/simulator/CMakeLists.txt
+++ b/src/simulator/CMakeLists.txt
@@ -7,3 +7,11 @@ set(SOURCE
    ${CMAKE_CURRENT_SOURCE_DIR}/mipsSimulator.cpp   
    PARENT_SCOPE
 )
+
+set(SOURCE_DBT
+   ${SOURCE_DBT}
+  ${CMAKE_CURRENT_SOURCE_DIR}/genericSimulator.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/vexSimulator.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/riscvSimulator.cpp
+   PARENT_SCOPE
+)
