--- a/src/transformation/CMakeLists.txt
+++ b/src/transformation/CMakeLists.txt
@@ -16,3 +16,15 @@ set(SOURCE
 )
 
 
+set(SOURCE_DBT
+   ${SOURCE_DBT}
+   ${CMAKE_CURRENT_SOURCE_DIR}/optimizeBasicBlock.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/buildControlFlow.cpp   
+   ${CMAKE_CURRENT_SOURCE_DIR}/reconfigureVLIW.cpp   
+   ${CMAKE_CURRENT_SOURCE_DIR}/buildTraces.cpp  
+   ${CMAKE_CURRENT_SOURCE_DIR}/rescheduleProcedure.cpp 
+  ${CMAKE_CURRENT_SOURCE_DIR}/memoryDisambiguation.cpp 
+   
+     
+   PARENT_SCOPE
+)
