--- a/src/transformation/irScheduling/CMakeLists.txt
+++ b/src/transformation/irScheduling/CMakeLists.txt
@@ -7,3 +7,12 @@ set(SOURCE
    ${CMAKE_CURRENT_SOURCE_DIR}/irScheduling.cpp
    PARENT_SCOPE
 )
+
+
+set(SOURCE_DBT
+   ${SOURCE_DBT}
+   ${CMAKE_CURRENT_SOURCE_DIR}/irScheduling_scoreboard_sw.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/irScheduling_scoreboard_hw.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/irScheduling.cpp
+   PARENT_SCOPE
+)
