--- a/src/isa/CMakeLists.txt
+++ b/src/isa/CMakeLists.txt
@@ -6,3 +6,12 @@ set(SOURCE
    ${CMAKE_CURRENT_SOURCE_DIR}/riscvToVexISA.cpp
    PARENT_SCOPE
 )
+
+set(SOURCE_DBT
+   ${SOURCE_DBT}
+   ${CMAKE_CURRENT_SOURCE_DIR}/vexISA.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/irISA.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/riscvISA.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/riscvToVexISA.cpp
+   PARENT_SCOPE
+)
