--- a/src/transformation/firstPassTranslation/CMakeLists.txt
+++ b/src/transformation/firstPassTranslation/CMakeLists.txt
@@ -6,3 +6,12 @@ set(SOURCE
    ${CMAKE_CURRENT_SOURCE_DIR}/firstPassTranslation.cpp
    PARENT_SCOPE
 )
+
+
+set(SOURCE_DBT
+   ${SOURCE_DBT}
+   ${CMAKE_CURRENT_SOURCE_DIR}/firstPassTranslation_riscv_sw.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/firstPassTranslation_riscv_hw.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/firstPassTranslation.cpp
+   PARENT_SCOPE
+)
