--- a/src/transformation/irGeneration/CMakeLists.txt
+++ b/src/transformation/irGeneration/CMakeLists.txt
@@ -5,3 +5,11 @@ set(SOURCE
    ${CMAKE_CURRENT_SOURCE_DIR}/irGeneration.cpp
    PARENT_SCOPE
 )
+
+set(SOURCE_DBT
+   ${SOURCE_DBT}
+   ${CMAKE_CURRENT_SOURCE_DIR}/irGeneration_sw.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/irGeneration_hw.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/irGeneration.cpp
+   PARENT_SCOPE
+)
