Add CGRA simulator + dummy test simulation

--- a/src/dbt/CMakeLists.txt
+++ b/src/dbt/CMakeLists.txt
@@ -3,7 +3,7 @@ set(SOURCE
    	${CMAKE_CURRENT_SOURCE_DIR}/dbtPlateform.cpp	
    	${CMAKE_CURRENT_SOURCE_DIR}/initCode.cpp
   	${CMAKE_CURRENT_SOURCE_DIR}/insertions.cpp
-	${CMAKE_CURRENT_SOURCE_DIR}/profiling.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/profiling.cpp
  
    PARENT_SCOPE
 )
@@ -12,8 +12,8 @@ set(SOURCE_DBT
    ${SOURCE_DBT}
    	${CMAKE_CURRENT_SOURCE_DIR}/dbtPlateform.cpp
    	${CMAKE_CURRENT_SOURCE_DIR}/initCode.cpp
-  	${CMAKE_CURRENT_SOURCE_DIR}/insertions.cpp
-	${CMAKE_CURRENT_SOURCE_DIR}/profiling.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/insertions.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/profiling.cpp
  
    PARENT_SCOPE
 )
@@ -22,6 +22,7 @@ set(EXECUTABLE
    ${EXECUTABLE}
    ${CMAKE_CURRENT_SOURCE_DIR}/dbt.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/sbt.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/cgra.cpp
    
    PARENT_SCOPE
 )
