--- a/src/simulator/CMakeLists.txt
+++ b/src/simulator/CMakeLists.txt
@@ -4,7 +4,9 @@ set(SOURCE
    ${CMAKE_CURRENT_SOURCE_DIR}/vexSimulator.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/vexTraceSimulator.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/riscvSimulator.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/mipsSimulator.cpp   
+  ${CMAKE_CURRENT_SOURCE_DIR}/mipsSimulator.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/cgraSimulator.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/functionalUnit.cpp
    PARENT_SCOPE
 )
 
@@ -13,5 +15,7 @@ set(SOURCE_DBT
   ${CMAKE_CURRENT_SOURCE_DIR}/genericSimulator.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/vexSimulator.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/riscvSimulator.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/cgraSimulator.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/functionalUnit.cpp
    PARENT_SCOPE
 )
