--- a/src/isa/CMakeLists.txt
+++ b/src/isa/CMakeLists.txt
@@ -4,6 +4,7 @@ set(SOURCE
    ${CMAKE_CURRENT_SOURCE_DIR}/irISA.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/riscvISA.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/riscvToVexISA.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/cgraIsa.cpp
    PARENT_SCOPE
 )
 
@@ -13,5 +14,6 @@ set(SOURCE_DBT
    ${CMAKE_CURRENT_SOURCE_DIR}/irISA.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/riscvISA.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/riscvToVexISA.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/cgraIsa.cpp
    PARENT_SCOPE
 )
