--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -8,6 +8,7 @@ set(SOURCE
    ${CMAKE_CURRENT_SOURCE_DIR}/threadedDebug.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/log.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/dbtProfiling.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/tikzDrawer.cpp
    PARENT_SCOPE
 )
 
