Bypass register file usage for CGRA instructions.

--- a/src/transformation/CMakeLists.txt
+++ b/src/transformation/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SOURCE
    ${CMAKE_CURRENT_SOURCE_DIR}/rescheduleProcedure.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/memoryDisambiguation.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/cgraScheduler.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/localRegisterAnalysis.cpp
    
      
    PARENT_SCOPE
@@ -26,6 +27,7 @@ set(SOURCE_DBT
    ${CMAKE_CURRENT_SOURCE_DIR}/rescheduleProcedure.cpp 
   ${CMAKE_CURRENT_SOURCE_DIR}/memoryDisambiguation.cpp 
   ${CMAKE_CURRENT_SOURCE_DIR}/cgraScheduler.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/localRegisterAnalysis.cpp
    
      
    PARENT_SCOPE
