Adding the checkSpeculation file

--- a/src/transformation/CMakeLists.txt
+++ b/src/transformation/CMakeLists.txt
@@ -11,8 +11,8 @@ set(SOURCE
    ${CMAKE_CURRENT_SOURCE_DIR}/rescheduleProcedure.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/memoryDisambiguation.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/localRegisterAnalysis.cpp
-   
-     
+   ${CMAKE_CURRENT_SOURCE_DIR}/checkSpeculation.cpp
+        
    PARENT_SCOPE
 )
 
@@ -24,9 +24,9 @@ set(SOURCE_DBT
    ${CMAKE_CURRENT_SOURCE_DIR}/reconfigureVLIW.cpp   
    ${CMAKE_CURRENT_SOURCE_DIR}/buildTraces.cpp  
    ${CMAKE_CURRENT_SOURCE_DIR}/rescheduleProcedure.cpp 
-  ${CMAKE_CURRENT_SOURCE_DIR}/memoryDisambiguation.cpp 
-  ${CMAKE_CURRENT_SOURCE_DIR}/localRegisterAnalysis.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/memoryDisambiguation.cpp 
+   ${CMAKE_CURRENT_SOURCE_DIR}/localRegisterAnalysis.cpp
+   ${CMAKE_CURRENT_SOURCE_DIR}/checkSpeculation.cpp
    
-     
    PARENT_SCOPE
 )
